Fix WebSocket security error for HTTPS pages

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,11 @@
 VITE_DEV_MODE=false
 
 # Your Home Assistant WebSocket URL
-# Format: ws://your-home-assistant-ip:8123/api/websocket
-# Example: ws://192.168.1.100:8123/api/websocket
-VITE_HA_WEBSOCKET_URL=ws://localhost:8123/api/websocket
+# Format: wss://your-home-assistant-domain:8123/api/websocket (for HTTPS pages)
+# Format: ws://your-home-assistant-ip:8123/api/websocket (for HTTP pages only)
+# Example: wss://homeassistant.local:8123/api/websocket
+# Example: ws://192.168.1.100:8123/api/websocket (only works with HTTP frontend)
+VITE_HA_WEBSOCKET_URL=wss://localhost:8123/api/websocket
 
 # Your Home Assistant Long-lived Access Token
 # Generate this in Home Assistant: Profile -> Long-lived Access Tokens
