Improve WebSocket error handling and diagnostics

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,13 @@
 VITE_DEV_MODE=false
 
 # Your Home Assistant WebSocket URL
-# Format: wss://your-home-assistant-domain:8123/api/websocket (for HTTPS pages)
-# Format: ws://your-home-assistant-ip:8123/api/websocket (for HTTP pages only)
+# IMPORTANT: Protocol must match your page's security level:
+# - Use wss:// if accessing this dashboard via HTTPS
+# - Use ws:// if accessing this dashboard via HTTP (less secure)
+# Format: wss://your-home-assistant-domain:8123/api/websocket (for HTTPS)
+# Format: ws://your-home-assistant-ip:8123/api/websocket (for HTTP)
 # Example: wss://homeassistant.local:8123/api/websocket
-# Example: ws://192.168.1.100:8123/api/websocket (only works with HTTP frontend)
+# Example: ws://192.168.1.100:8123/api/websocket (only works with HTTP dashboard)
 VITE_HA_WEBSOCKET_URL=wss://localhost:8123/api/websocket
 
 # Your Home Assistant Long-lived Access Token
